--- a/static/styles.css
+++ b/static/styles.css
@@ -6,7 +6,7 @@
 
 html, body {
     height: 100%;
-    background-color: gray;
+    background-color: #222222;
     overflow: hidden;
 }
 
@@ -17,14 +17,20 @@ body {
 }
 
 .video-container {
-    width: 95vw;
+    width: 80vw;
     height: auto;
     max-height: 95vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 
 video {
-    width: 100%;
+    width: 100%; 
     height: auto;
-    max-height: 95vh;
-    object-fit: cover;
+    object-fit: contain;
+    max-width: 100%;
+    max-height: 100%;
+    border: none;
 }
